--- a/index.html
+++ b/index.html
@@ -1,5 +1,1 @@
-<<<<<<< HEAD
-this is version3
-=======
-this is version 2
->>>>>>> 5cbf4a721d5312e073671fa66279874ef1c970b5
+this is the final version
